--- a/TramiteDocumentarioOracle/web/vistas/tablas/add/addTramites.xhtml
+++ b/TramiteDocumentarioOracle/web/vistas/tablas/add/addTramites.xhtml
@@ -21,17 +21,7 @@
                 </p:panelGrid>
                 <p:panel id="frmProd">
                     <div class="row">
-                        <div class="col-md-4">
-                            <h:outputLabel value="Estado" for="fechaTram"/>
-                            <p:inputText class="form-control" id="fechaTram" disabled="true"
-                                         value="En Espera" style="width: 100%"/>
-                        </div>
                         
-                        <div class="col-md-4">
-                            <h:outputLabel value="Respuesta" for="rptaTram"/>
-                            <p:inputText class="form-control" id="rptaTram" 
-                                         value="#{tramitesC.tramites.rptaTram}" style="width: 100%"/>
-                        </div>
                         <div class="col-md-4">
                             <h:outputLabel value="Observación" for="obserTram"/>
                             <p:inputText class="form-control" id="obserTram" 
@@ -39,7 +29,7 @@
                         </div>
                         <div class="col-md-4">
                             <h:outputLabel value="Foliación" for="folTram"/>
-                            <p:inputText class="form-control" id="folTram"
+                            <p:inputText class="form-control" id="folTram" type="number"
                                          value="#{tramitesC.tramites.foliacion}" style="width: 100%"/>
                         </div>
                         <div class="col-md-4">
